[metadata]
name = DACBench
version = 0.0.1
author_email = eimer@tnt.uni-hannover.de
author = Theresa Eimer <{author_email}>
home_page = https://github.com/automl/{name}
project_urls =
    Documentation = https://dacbench.readthedocs.io/en/latest/
    Project Page = https://www.tnt.uni-hannover.de/en/project/dacbench/
license = Apache 2.0
license_file = LICENSE
long_description = file: README.md
keywords =
    DAC
    Dynamic Algorithm Configuration
    HPO
classifiers =
     Programming Language :: Python :: 3 
     Natural Language :: English 
     Environment :: Console 
     Intended Audience :: Developers 
     Intended Audience :: Education 
     Intended Audience :: Science/Research 
     License :: OSI Approved :: Apache Software License 
     Operating System :: POSIX :: Linux 
     Topic :: Scientific/Engineering :: Artificial Intelligence 
     Topic :: Scientific/Engineering 
     Topic :: Software Development 

[options]
python_requires = >= 3.6
install_requires = 
    gym
    numpy
    scipy
    cma
    pandas
    matplotlib
    seaborn
    modea
    sobol_seq
    torchvision
    pytorch
    backpack-for-pytorch
    modcma
    IOHexperimenter

# Should be added
# [options.packages.find]
 
[options.extras_require]
dev =
    black==20.8b1
    scikit-learn==0.23.2
    flake8==3.8.4
    pytest==6.0.1
    pytest-html==3.1.1
    pytest-cov==2.7.0
    coverage[toml]>=4.0
    pre-commit==2.7.1
example = 
    chainerrl
    ray
    tabulate
    tensorflow
    dm-tree
    opencv-python
    stable-baselines
    jupyter
docs = 
    sphinxcontrib-napoleon==0.7
    sphinx-rtd-theme==0.5.1
    sphinx-autoapi==1.7.0
